--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5119"
+      "applicationUrl": "http://0.0.0.0:5119"
     },
     "IIS Express": {
       "commandName": "IISExpress",
