feat: add s3 upload support

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=app.db"
+  },
+  "Storage": {
+    "Provider": "S3",
+    "Endpoint": "",
+    "AccessKeyId": "",
+    "SecretAccessKey": "",
+    "Bucket": "splitz",
+    "Region": "us-east-1"
+  }
 }
