feat: add Swagger (Swashbuckle) support and custom filters
Integrate Swashbuckle.AspNetCore for OpenAPI docs, including custom schema and security filters. Configure Swagger in Program.cs with XML comments and Bearer auth. Disable Microsoft OpenAPI integration due to customization limitations. Serve Swagger spec in development.

--- a/SplitzBackend.csproj
+++ b/SplitzBackend.csproj
@@ -32,6 +32,7 @@
     <PackageReference Include="NetVips.Native.linux-x64" Version="8.18.0" />
     <PackageReference Include="NetVips.Native.win-x64" Version="8.18.0" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.12.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="10.1.0" />
     <PackageReference Include="System.IO.Hashing" Version="10.0.1" />
   </ItemGroup>
